OpenStack version: Stein

--- a/keystone/Dockerfile
+++ b/keystone/Dockerfile
@@ -1,5 +1,4 @@
-FROM python:2.7.12
-
+FROM python:2.7.17-buster
 
 EXPOSE $KEYSTONE_PORT
 RUN apt-get -y update \
@@ -7,8 +6,8 @@ RUN apt-get -y update \
     apache2 \
     libapache2-mod-shib2 \
     libldap2-dev libsasl2-dev \
-    libapache2-mod-wsgi git vim memcached \
-    libffi-dev python-dev libssl-dev mysql-client libssl-dev \
+    libapache2-mod-wsgi git vim memcached less \
+    libffi-dev python-dev libssl-dev mariadb-client libssl-dev \
     && apt-get -y clean
 
 ARG keystone_version
@@ -16,7 +15,8 @@ RUN git clone -b "$keystone_version" https://github.com/openstack/keystone.git
 RUN git clone -b "$keystone_version" https://github.com/openstack/requirements
 
 RUN useradd --user-group keystone \
-    && pip install -e /keystone -c /requirements/upper-constraints.txt
+    && pip install -e /keystone -c /requirements/upper-constraints.txt \
+    && pip install -e /keystone mechanicalsoup
 
 RUN pip install pbr PyMySQL python-memcached python-openstackclient python-ldap ldappool -c /requirements/upper-constraints.txt \
     && mkdir -p /etc/keystone/credential-keys /var/www/cgi-bin/keystone /var/log/apache2 /home/keystone \
@@ -35,6 +35,7 @@ COPY token.py /token.py
 
 RUN chown -R keystone: /etc/keystone /var/www/cgi-bin/keystone /var/log/apache2 /home/keystone \
     && chown -R _shibd:_shibd  /etc/shibboleth/* \
-    && chown -R _shibd:_shibd  /etc/shibboleth/
+    && chown -R _shibd:_shibd  /etc/shibboleth/ \
+    && chmod 777 /etc/shibboleth/shibboleth2.xml
 
 RUN echo "ServerName $HOSTNAME" >> /etc/apache2/apache2.conf
