--- a/docker-compose-keystones.yaml
+++ b/docker-compose-keystones.yaml
@@ -1,18 +1,14 @@
-version: "2"
+version: "3.5"
 volumes:
   fernet_keys:
-  bootstrap.ldif:
   db_data:
   bootstraped1:
   bootstraped2:
 
 networks:
   openstack:
-     driver: bridge
-     ipam:
-       driver: default
-       config:
-          - subnet: 192.168.200.0/24
+    external:
+      name: os_idp_keystone
 
 services:
   database:
@@ -26,48 +22,6 @@ services:
     environment:
       MYSQL_ROOT_PASSWORD: r00tme
 
-  idp:
-    build: ./shibboleth
-    container_name: idp
-    hostname: idp
-    entrypoint: java -Didp.home=/opt/shibboleth-idp -Djetty.base=/opt/shibboleth-idp/jetty-base -Djetty.logs=/opt/shibboleth-idp/jetty-base/logs -jar /dists/jetty/start.jar
-    # entrypoint: tail -f /var/log/bootstrap.log
-    # network_mode: host
-    networks:
-      openstack:
-        ipv4_address: 192.168.200.4
-    extra_hosts:
-      - "ldap:192.168.200.2"
-    ports:
-      - "443:8443"
-    depends_on:
-      - ldap
-
-  ldap:
-     image: osixia/openldap:1.2.3
-     container_name: ldap
-     hostname: ldap
-     command: [--copy-service]
-     volumes:
-       - ./domain.ldif:/container/service/slapd/assets/config/bootstrap/ldif/data.ldif
-     networks:
-       openstack:
-         ipv4_address: 192.168.200.2
-     environment:
-       LDAP_ORGANISATION: Openstack
-       LDAP_DOMAIN: openstack.com
-       LDAP_ADMIN_PASSWORD: r00tme
-
-  phpldapadmin:
-     image: osixia/phpldapadmin
-     hostname: phpldapadmin
-     container_name: phpldapadmin
-     networks:
-       openstack:
-         ipv4_address: 192.168.200.5
-     environment:
-       PHPLDAPADMIN_LDAP_HOSTS: ldap
-       PHPLDAPADMIN_HTTPS: "false"
 
   keystone:
     volumes:
@@ -78,12 +32,11 @@ services:
     build:
       context: ./keystone
       args:
-        keystone_version: master
+        keystone_version: stable/stein
     environment:
       - BOOTSTRAP=1
       - DB_NAME=database
       - KEYSTONE_PORT=5000
-      - ADMIN_PORT=35357
       - HOST_NAME=keystone
       - REGION=RegionOne
     container_name: keystone
@@ -94,8 +47,6 @@ services:
         ipv4_address: 192.168.200.6
     depends_on:
       - database
-      - ldap
-      - idp
 
   keystone2:
     volumes:
@@ -106,12 +57,11 @@ services:
     build:
       context: ./keystone
       args:
-        keystone_version: master
+        keystone_version: stable/stein
     environment:
     - BOOTSTRAP=1
     - DB_NAME=database
     - KEYSTONE_PORT=5001
-    - ADMIN_PORT=35358
     - HOST_NAME=keystone2
     - REGION=RegionTWO
     container_name: keystone2
@@ -122,6 +72,4 @@ services:
        ipv4_address: 192.168.200.7
     depends_on:
       - database
-      - ldap
-      - idp
       - keystone
